--- a/_posts/2025-03-24-homework.md
+++ b/_posts/2025-03-24-homework.md
@@ -3,8 +3,6 @@ layout: single
 title: "5주차 과제입니다"
 ---
 
-![과제 이미지](/docs/assets/images/homework.png)
+![image-20250324192835772](C:\blog\project\jaesikjeung-github-blog\jaesikjeung.github.io\images\2025-03-24-homework\image-20250324192835772.png)
 
-
-
-![성공](/docs/assets/images/success.png)
+![image-20250324192906708](C:\blog\project\jaesikjeung-github-blog\jaesikjeung.github.io\images\2025-03-24-homework\image-20250324192906708.png)
